# HypixelBot

./: .env.dev  .env.prod  README.md  bot.py  pyproject.toml
awsomehypixelbot/plugins/hypixelBot/: __init__.py  config.py
awsomehypixelbot/plugins/hypixelBot/utils/: messageBuilder.py  objs.py  player.py
